@@ -71,6 +71,19 @@
   <translation type="gettext">gnome-calculator</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="43.rc" date="2022-09-02" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 43.rc</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Fix crash when entering new function name !124 (Nathaniel Russel)</li>
+          <li>Fix source view border !121 (Alexander Mikhaylenko)</li>
+          <li>Flatpak build update !122 (Bartłomiej Piotrowski)</li>
+          <li>Port about window to libadwaita !119 (Christopher Davis)</li>
+          <li>Port to libsoup3 !120 (AppleME)</li>
+        </ul>
+      </description>
+    </release>
     <release version="43.alpha" date="2022-07-08" type="development">
       <description>
         <p>Overview of changes in gnome-calculator 43.alpha</p>
