@@ -1,3 +1,11 @@
+Overview of changes in gnome-calculator 43.rc
+    * Updated translations
+    * Fix crash when entering new function name !124 (Nathaniel Russel)
+    * Fix source view border !121 (Alexander Mikhaylenko)
+    * Flatpak build update !122 (Bartłomiej Piotrowski)
+    * Port about window to libadwaita !119 (Christopher Davis)
+    * Port to libsoup3 !120 (AppleME)
+    
 Overview of changes in gnome-calculator 43.alpha
     * Updated translations
     * Fixed broken undo/redo #266 (Robert Roth)
